--- a/ui/src/styles/components/_form.scss
+++ b/ui/src/styles/components/_form.scss
@@ -66,6 +66,12 @@
         border: none;
         color: #fff;
         border-radius: .5rem;
+        transition: background-color .5s;
+
+        &--disabled {
+          background: $black-600;
+          cursor: not-allowed;
+        }
       }
     }
   }
